--- a/app/views/static_pages/studyhall.html.erb
+++ b/app/views/static_pages/studyhall.html.erb
@@ -21,7 +21,7 @@
 
   <div class="row" id="countdown_clock">
     <div class="col-md-4 col-md-offset-1 col-xs-12">
-      <h2>Study Hall Schedule</h2>
+      <h2 style="text-align: center;">Study Hall Schedule</h2>
     </div>
     <div class="col-md-6 col-xs-12">
           <% if user_signed_in? %>
