--- a/app/views/layouts/_renderdayhome.html.erb
+++ b/app/views/layouts/_renderdayhome.html.erb
@@ -21,7 +21,7 @@
                   <% end %>
                 <% end %>
               </td>
-              
+
               <td class=col-xs-3>
                 <% edt = event.start_at + 3.hours %>
                 <% dayId = "week-day-#{currentDate.strftime('%A')}-#{i}"%>
@@ -38,6 +38,11 @@
                 document.getElementById('<%=dayId%>').innerHTML = date.toLocaleString(undefined, optionsDay);
                 document.getElementById('<%=timeId%>').innerHTML = date.toLocaleString(undefined, optionsTime);
               </script>
+
+              <td class=col-xs-3>
+                <span style="font-size:125%;" <%=i%>> Conversation</span>
+              </td>
+
 
               <td class="col-xs-3 overflow-visible">
                 <% rsvps = event.rsvpqs %>
