--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -11,7 +11,7 @@
       <tbody>
         <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.usrid) %>
-          <% i += 1 %>  
+          <% i += 1 %>
           <tr>
             <td class=col-xs-3>
 
@@ -27,7 +27,7 @@
             </td>
 
 
-            
+
             <td class=col-xs-3>
               <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
               <br>
@@ -48,7 +48,7 @@
 
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
               <%= link_to " Join Conversation NOW ", user.permalink + "/viewer?chatrm=" + event.topic, class: "btn btn-primary btn-sm fa fa-video-camera" %>
-              
+
             <% else %>
                 <%= form_for(@rsvp) do |f| %>
                   <% if @rsvp.errors.any? %>
@@ -93,14 +93,17 @@
       <td class=col-xs-3>
       <span style="font-size:125%;" <%=i%>> Conversation</span>
       </td>
-
+      <td>
+          <%= image_tag "person.png", :class => 'img-xs' %>
+      </td>
        <td class="col-xs-3 overflow-visible">
                 <% rsvps = event.rsvpqs %>
                  <% rsvpusers = event.users %>
                 <% if rsvps.count > 0 %>
               <div class="btn-group">
                 <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" >
-                  <span class="caret"></span> &nbsp; Who will be there &nbsp; <span><%= rsvps.count %></span>
+                  <!--button for rsvp counter-->
+                  <span class="caret"></span><span><%= rsvps.count %></span>
                 </button>
                 <div class="dropdown-menu dropdown-menu-right rsvp-dropdown">
                   <% rsvps.each do |rsvp| %>
@@ -144,7 +147,7 @@
               'width=600,height=400,top=100,left=300');
               return false;">
               <%= image_tag("social-share-button/facebook.png")%>
-             
+
             </a>&nbsp
 
               <!-- Twitter Share -->
@@ -164,7 +167,7 @@
               return false;">
               <%= image_tag("social-share-button/linkedin.png")%>
             </a>&nbsp
-            
+
           </td>
         </tr>
         <% end %>
