--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -91,7 +91,7 @@
       background: #FFF;
       color: #020202;
       height: 150px;
-      
+
       vertical-align: top;
       font-size: 16px;
       overflow: hidden;
@@ -107,7 +107,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
-    
+
     a {
       text-decoration: none;
       padding: 0 10px;
@@ -144,6 +144,7 @@
   height: 15%;
   /*text-align: center;*/
   padding-left: 70px;
+  background-color: #8C1D40;
 }
 
 .tabContainer2 .buttonContainer {
@@ -153,17 +154,19 @@
 }
 
 .tabContainer .buttonContainer button{
-  width: 200px;
+  width: 150px;
   float: center;
   cursor: pointer;
-  padding: 10px;
+  padding: 5px;
   font-family: sans-serif;
   font-size: 18px;
   font-weight: bold;
   background-color: #8C1D40;
   color: white;
   border-radius: 5px;
-  margin-top: 5px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-color: white;
 }
 
 .tabContainer2 .buttonContainer button{
@@ -211,10 +214,10 @@
 
 .expand{
   background: none;
-  padding: 0; 
-  border: none; 
-  font-family: arial, sans-serif; 
-  color: #069; 
-  text-decoration: underline; 
-  cursor: pointer; 
+  padding: 0;
+  border: none;
+  font-family: arial, sans-serif;
+  color: #069;
+  text-decoration: underline;
+  cursor: pointer;
 }
