--- a/app/views/layouts/_weeklycalendar.html.erb
+++ b/app/views/layouts/_weeklycalendar.html.erb
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="row">
     <% getWeekDays.each_with_index do |date, index|%>
-    <button onclick="Panel1(<%=index%>,'#900C3F')" class="btn btn-primary weekBtn" style="width:120px;">
+    <button onclick="Panel1(<%=index%>,'#900C3F')" class="btn btn-primary-week weekBtn" style="border-color: #ffffff;border-width: thin;">
       <%=date.strftime("%A")%><br><%= date.month%><%= "/" %><%= date.day %>
     </button>
     <%end%>
