--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
         </div><br><br><br>
 
         <h3 style="color:#fff; margin-right: 20px; margin-left: 20px; line-height: 1.2em"><i>New to ThinQ.tv?</i>
-          <br>Most of the day we have a video chat <%= link_to "Drop-In", studyhall_path, style: "color: #ffc627" %> Hours so you can meet Activists and ask questions about ThinQ.tv! 
+          <br>Most of the day we have a video chat <%= link_to "Drop-In", studyhall_path, style: "color: #ffc627" %> Hours so you can meet Activists and ask questions about ThinQ.tv!
         </h3>
         <% if @displaystudy.present? %>
           <% if (Time.current > Time.parse(@start_timestudy)) && (Time.current < Time.parse(@end_timestudy)) %>
@@ -65,9 +65,10 @@
   </div>
   <div class="tabContainer">
     <div class="buttonContainer">
-      <button onclick="showPanel(0,'#4caf50')">List View</button>
-      <button onclick="showPanel(1,'#4caf50')">Daily View</button>
-      <button onclick="showPanel(2,'#4caf50')">Monthly View</button>
+      <button onclick="showPanel(0,'#4caf50')">All</button>
+      <button onclick="showPanel(1,'#4caf50')">Study Hall</button>
+      <button onclick="showPanel(2,'#4caf50')">Conversations</button>
+        <%= link_to 'Post your Own Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise" %>
     </div>
     <div class="tabPanel">
       <%= render 'layouts/convocalendar', collection: @conversations %>
