--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -90,7 +90,7 @@
       background: #FFF;
       color: #020202;
       height: 150px;
-      
+
       vertical-align: top;
       font-size: 16px;
       overflow: hidden;
@@ -106,7 +106,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     text-align: center;
-    
+
     a {
       text-decoration: none;
       padding: 0 10px;
@@ -143,6 +143,7 @@
   height: 15%;
   /*text-align: center;*/
   padding-left: 70px;
+  background-color: #8C1D40;
 }
 
 .tabContainer2 .buttonContainer {
@@ -210,10 +211,10 @@
 
 .expand{
   background: none;
-  padding: 0; 
-  border: none; 
-  font-family: arial, sans-serif; 
-  color: #069; 
-  text-decoration: underline; 
-  cursor: pointer; 
+  padding: 0;
+  border: none;
+  font-family: arial, sans-serif;
+  color: #069;
+  text-decoration: underline;
+  cursor: pointer;
 }
