--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -65,9 +65,9 @@
   </div>
   <div class="tabContainer">
     <div class="buttonContainer">
-      <button onclick="showPanel(0,'#4caf50')">All</button>
-      <button onclick="showPanel(1,'#4caf50')">Study Hall</button>
-      <button onclick="showPanel(2,'#4caf50')">Conversations</button>
+      <button onclick="showPanel(0,'#4caf50')">List View</button>
+      <button onclick="showPanel(1,'#4caf50')">Daily View</button>
+      <button onclick="showPanel(2,'#4caf50')">Monthly View</button>
         <%= link_to 'Post your Own Conversation', new_event_path, class: "btn btn-warning", title: "Host drop-in conversation sessions or invite people to ask questions about your area of expertise" %>
     </div>
     <div class="tabPanel">
