Stylistic changes to the schedule and about us page

--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -17,13 +17,14 @@
 
 #calendar-event {
   display: block;
-  font-size: 1em;
+  font-size: 1.1em;
   font-weight: 600;
+  color: #222222;
 }
 
 #calendar-host {
   display: block;
-  font-size: 1.50rem;
+  font-size: 1rem;
 }
 
 #calendar-time {
@@ -116,13 +117,9 @@
   height: 15%;
   /*text-align: center;*/
   padding-left: 70px;
-<<<<<<< HEAD
-  background-color: #8C1D40;
-=======
   text-align: center;
   border-color: #FFC627;
   border-width: 1px;
->>>>>>> f802848fa70979efcc864978262a0e6c38f36b51
 }
 
 .tabContainer2 .buttonContainer {
@@ -132,19 +129,17 @@
 }
 
 .tabContainer .buttonContainer button{
-  width: 150px;
+  width: 200px;
   float: center;
   cursor: pointer;
-  padding: 5px;
+  padding: 10px;
   font-family: sans-serif;
   font-size: 18px;
   font-weight: bold;
   background-color: #8C1D40;
   color: white;
   border-radius: 5px;
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border-color: white;
+  margin-top: 5px;
 }
 
 .tabContainer2 .buttonContainer button{
