--- a/app/views/layouts/_maincalendar.html.erb
+++ b/app/views/layouts/_maincalendar.html.erb
@@ -28,7 +28,7 @@
           <td class="col-sm-2" style="min-width: 125px;">
             <% rsvpeople = "" %>
             <% rsvpusers = event.users %>
-            <span style="font-size:90%;" id=calendar-time-day<%=i%>></span>
+            <span style="font-size:90%" id=calendar-time-day<%=i%>></span>
             <br>
             <span style="font-size:100%;"id=calendar-time-hour<%=i%>></span>
           </td>
@@ -208,4 +208,3 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
-
