--- a/app/views/layouts/_renderdayhome.html.erb
+++ b/app/views/layouts/_renderdayhome.html.erb
@@ -26,10 +26,10 @@
               <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
               <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
               <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
-              <span><%= image_tag "live2.png" , :class => 'img-xs'%></span>
+              <span><%= image_tag "live2.png" , :class => 'img-sm'%></span>
               <%end%>
               </td>
-              
+
 
               <td class=col-xs-3>
                 <% edt = event.start_at + 3.hours %>
@@ -37,7 +37,7 @@
                 <% timeId = "week-time-#{currentDate.strftime('%A')}-#{i}"%>
                 <span style="font-size:125%;" id="<%=dayId%>"></span>
                 <br>
-                <span style="font-size:90%;"id="<%=timeId%>"></span>
+                <span style="font-size:90%; color: #6c757d;"id="<%=timeId%>"></span>
               </td>
               <script>
                 var date = new Date(Date.parse("<%= event.start_at.strftime("%FT%T%:z") %>"));
@@ -95,7 +95,7 @@
                 <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
 
                 <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
-                  <%= link_to " Join Conversation NOW ", user_viewer_path(user.permalink, chatrm: event.topic , event: event.id), class: "btn btn-primary btn-sm fa fa-video-camera" %>
+                  <%= link_to " JOIN ", user_viewer_path(user.permalink, chatrm: event.topic , event: event.id), class: "btn btn-primary btn-sm fa fa-video-camera" %>
                   <div id="live<%=eventCount%>"></div>
                   <script>
                     function liveCount() {
