--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -11,37 +11,19 @@
       <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.user_id) %>
           <div class = "col-3" style="text-align: left; padding-left: 50px">
-            <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700", title: event.desc %><br>
+            <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222;", title: event.desc %><br>
             <%= link_to user.name, user.permalink %>
             <% if user_signed_in? %>
               <% if event.user_id == current_user.id %>
                 <br><%= link_to '(Edit Conversation)', edit_event_path(event.id) %>
               <% end %>
             <% end %>
-<<<<<<< HEAD
-            </td>
-
-            <td class=col-xs-3>
-            <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
-            <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
-            <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
-            <span><%= image_tag "live2.png" , :class => 'img-xs'%></span>
-            <%end%>
-            </td>
-
-            <td class=col-xs-3>
-              <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
-              <br>
-              <span style="font-size:90%;"id=convocalendar-time<%=i%>></span>
-            </td>
-=======
           </div>
           <div class = "col-3" style="color:#000" >
             <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
             <br>
-            <span style="font-size:90%;" id=convocalendar-time<%=i%>></span>
+            <span style="font-size:90%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
           </div>
->>>>>>> f802848fa70979efcc864978262a0e6c38f36b51
           <script>
             var date = new Date(Date.parse("<%= event.start_at.strftime("%FT%T%:z") %>"));
             date.setHours(date.getHours() + parseInt("<%=offset%>")) // the 7 is for daylight savings time
@@ -51,18 +33,14 @@
             document.getElementById('convocalendar-time<%=i%>').innerHTML = date.toLocaleString(undefined, optionsTime);
           </script>
 
-<<<<<<< HEAD
-          <td class=col-xs-3 style="text-align:center">
-=======
           <div class="col-3">
 
->>>>>>> f802848fa70979efcc864978262a0e6c38f36b51
             <% @rsvp = Rsvpq.new %>
             <% start_time = event.start_at.strftime("%B %d %Y") + ' ' + event.start_at.strftime("%T") %>
             <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
 
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
-              <%= link_to " Join Conversation NOW ", user_viewer_path(user.permalink, chatrm: @displayconvo.topic , event: event.id), class: "btn btn-primary btn-sm fa fa-video-camera" %>
+              <%= link_to " JOIN ", user_viewer_path(user.permalink, chatrm: @displayconvo.topic , event: event.id), class: "btn btn-primary btn-sm fa fa-video-camera" %>
               <div id="live<%=i%>"></div>
               <script>
                 function liveCount() {
@@ -112,51 +90,7 @@
                   <% end %>
                 <% end %>
             <% end %>
-<<<<<<< HEAD
-          </td>
-
-       <td class="col-xs-3 overflow-visible">
-                <% rsvps = event.rsvpqs %>
-                 <% rsvpusers = event.users %>
-                <% if rsvps.count > 0 %>
-              <div class="btn-group">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" >
-                  <!--button for rsvp counter-->
-                  <span><%= image_tag "person.png", :class => 'img-xs' %></span><span><%= rsvps.count %></span>
-                </button>
-                <div class="dropdown-menu dropdown-menu-right rsvp-dropdown">
-                  <% rsvps.each do |rsvp| %>
-                  <%if !rsvp.user_id.nil? %>
-                    <% rsvpuser = User.find(rsvp.user_id) %>
-                    <%= link_to user_profile_path(rsvpuser.permalink) do %>
-                      <div class="dropdown-item">
-                        <span>
-                          <% if rsvpuser.profilepic.present? && rsvpuser.profilepic != '' %>
-                            <%= image_tag rsvpuser.profilepic.url.to_s, :class => 'img-xs' %>
-                          <% elsif !rsvpuser.profilepic.url.nil? %>
-                            <% if rsvpuser.profilepic.url.match(/http/) %>
-                              <%= image_tag rsvpuser.profilepic.url, :class => 'img-xs' %>
-                            <% end %>
-                          <% else %>
-                            <%= image_tag "logoDigitalHollow300.png", :class => 'img-xs' %>
-                          <% end %>
-                        </span>
-                        <%= rsvpuser.name %></div>
-                    <% end %>
-                  <% end %>
-                  <% end %>
-                  <% rsvps.each do |rsvp| %>
-                    <% unless rsvp.email.blank? %>
-                      <% parts = rsvp.email.split('@') %>
-                      <div class="dropdown-item"><%= parts[0] %></div>
-                    <% end %>
-                  <% end %>
-                </div>
-                <% end %>
-              </td>
-=======
           </div>
->>>>>>> f802848fa70979efcc864978262a0e6c38f36b51
 
           <!-- Share Buttons -->
           <div class = "col-3">
@@ -189,27 +123,16 @@
               return false;">
               <%= image_tag("social-share-button/linkedin.png")%>
             </a>&nbsp
-<<<<<<< HEAD
 
-          </td>
-        </tr>
-        <% i += 1 %>
-        <% end %>
-      </tbody>
-    </table>
-  <% end %>
-=======
-            
           </div>
 
           <div style="width: 96%;">
             <hr>
           </div>
 
-        <% i += 1 %>  
+        <% i += 1 %>
       <% end %>
     <% end %>
->>>>>>> f802848fa70979efcc864978262a0e6c38f36b51
 </div>
 
 <script>
