--- a/app/views/static_pages/studyhall.html.erb
+++ b/app/views/static_pages/studyhall.html.erb
@@ -32,7 +32,7 @@
     <div class="col-sm-12">
       <h1 class = "text-left text-primary pl-4 ml-1"><b>Drop-In Schedule</b></h1>
     </div>
-    
+
     <div class="col-md-8 col-sm-12 text-left pl-2">
          <% if user_signed_in? %>
             <br>Don't see your desired hour on the schedule yet? <br>
@@ -46,14 +46,14 @@
       </div>
 
     </div>
-     <div class="tabPanel text-center w-100">
+     <div class="tabPanel text-center w-100" style="display: block; background-color: #8c1d40;">
       <div class="container-fluid " id="calendar">
         <div class="col-sm-12">
         <%= render 'layouts/weeklycalendar',  eventPartial: "layouts/renderday"%>
         </div>
       </div>
     </div>
-      
+
     <div class="tabPanel" >
       <div class="container-fluid mr-5 pr-5">
        <div id="events">
@@ -66,7 +66,7 @@
 </div>
 
 <br>
-  
+
     <h2 class="text-center text-primary" > <strong>
       We currently have Drop-In hours for 3 topics:</strong>
     </h2>
@@ -81,7 +81,7 @@
           </div>
             <div class="card-body mr-5 pr-5">
               <h4> <a class="btn btn-primary btn-lg btn-block text-center" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-            UX Research <br> 
+            UX Research <br>
               </a></h4>
               <div class="collapse" id="collapseTwo">
                 <div>
@@ -89,11 +89,11 @@
                 - Be in the video chat viewer for each other incase you want feedback from others with UX career interests. <br>
                 - Form a support group available several hours per day who are there when you want to be around others also improving their UX Survey skills.<br>
                 </div>
-              </div> 
+              </div>
             </div>
         </div>
       </div>
-    
+
 
       <div class="col-md-4 ">
         <div class="container">
@@ -103,7 +103,7 @@
           </div>
           <div class="card-body mr-5 pr-5">
               <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
-             RUBY ON RAILS Web Development <br> 
+             RUBY ON RAILS Web Development <br>
               </a>
             </h4>
               <div class="collapse" id="collapseOne">
@@ -127,7 +127,7 @@
           </div>
           <div class="card-body mr-5 pr-5">
             <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
-             WOMAN DEVELOPERS <br> 
+             WOMAN DEVELOPERS <br>
               </a></h4>
               <div class="collapse" id="collapseThree">
                 <div>
@@ -139,7 +139,7 @@
               </div>
           </div>
         </div>
-      </div>      
+      </div>
       </div>
 
     <script type="text/javascript">
