--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -50,15 +50,13 @@ $overlaid-text: 0 0 4px rgba(0,0,0,.8) !important;
 }
 
 h1.white{
-  color: #fff;
+  color: $brand-black;
   font-family: Helvetica;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 41px;
-  text-shadow: 0px 4px 4px #000;
   padding-top: 30px;
-  padding-bottom: 20px;
 }
 
 h1.maroon{
