Small stylistic changes to nav bar and top part of home page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-primary" style="box-shadow: 0 5px 10px rgba(0,0,0,.5)">
   <%= link_to image_tag("yellow brain.png", title: "ThinQ.tv", id: "navbarLogo", width: "30", height: "30"), root_path %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
