--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="row bg-primary mt-2 pl-5">
+<div class="row bg-primary mt-2 pl-5" style="background-image: linear-gradient(to bottom right, #8C1D40, #8C1D40, purple);margin-left: -5rem !important">
 
   <div class="col-lg-5 pt-3 pb-4 pl-5 ml-3">
   <% flash.each do |key, value| %>
@@ -6,14 +6,18 @@
         <%= value %>
       </div>
     <% end %>
-    <h1 class="text-center text-white mt-5 pl-5 pt-5">
-      <strong>STEMinism to make you</strong>
-        <%= image_tag("GoldThinQ60.png")%>
+    <h1 class="text-center text-white mt-5 pl-5 pt-5" style="text-align: left !important; padding-left: 0rem !important; margin: 0rem !important; font-size:375%">
+      <strong>Conversations to make you</strong>
+        <%= image_tag("GoldThinQ60.png", style: "transform: translate(0px, -8px);")%>
     </h1>
     <br>
-    <h2 class="text-center text-white">
-      Video Chat community throughout the day for <br>
-      Women & Minorities in STEM
+    <h2 class="text-center text-white" style="text-align: left !important; font-size:105%; font-weight: normal; line-height: 1.8">
+      ThinQ.TV is a video chat platform that allows individuals to
+      participate and collaborate with others about current important
+      topics such as the 2020 Election, Activism, Current Events,
+      Scientific Breakthroughs and much more! Join a conversation and
+      get informed! There are always video chats happening twelve
+      hours a day. Scroll down to see what people are talking about!
     </h2>
   </div>
 
