Changes to homepage: learn more and join buttons added, changed titles in middle section, button recolors and resizes in middle and schedule

--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -22,10 +22,11 @@ main {
   margin-right: 10px;
 }
 
-.img-sm{
+.img-live{
   height: 30px;
   width: 55px;
   margin-right: 50px;
+  margin-top: 10px;
 }
 
 .navbar-default {
