--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -82,11 +82,46 @@
     background-color: $brand-secondary !important;
     height: 50px;
     margin-bottom: 9px !important;
-    padding-top: 11px !important;
     float: right;
     font-weight: bold !important;
   }
 
+  .btn-join {
+      color: $brand-primary !important;
+      background-color: $brand-secondary !important;
+      border-color: $brand-secondary !important;
+      padding-top: 9px !important;
+      margin-right: 0px !important;
+      margin-top: 7px !important;
+      margin-bottom: 30px !important;
+      font-weight: bold !important;
+      font-size: 120% !important;
+      width: 48%;
+      float: right;
+    }
+
+  .btn-learn {
+      color: $brand-white !important;
+      background-color: $brand-primary !important;
+      border-color: $brand-white !important;
+      padding-top: 7px !important;
+      margin-left: 0px !important;
+      margin-top: 30px !important;
+      margin-bottom: 30px !important;
+      font-size: 130% !important;
+      width: 48%;
+      float: left;
+    }
+
+  .btn-countdown {
+      color: #ffffff !important;
+      background-color: $brand-secondary !important;
+      border-color: $brand-secondary !important;
+      font-weight: bold !important;
+      font-size: 120% !important;
+      width: 53%;
+      float: center;
+    }
 
 .btn {
     display: inline-block;
