--- a/app/assets/stylesheets/styles/_panels.scss
+++ b/app/assets/stylesheets/styles/_panels.scss
@@ -216,5 +216,7 @@
 
 hr.title-divider{
   border-top: 3.5px solid $brand-secondary;
-  width: 25%;
+}
+hr.black-divider{
+  border-top: 3.5px solid $brand-black;
 }
