--- a/app/views/layouts/_countdown_clockstudy.html.erb
+++ b/app/views/layouts/_countdown_clockstudy.html.erb
@@ -5,7 +5,7 @@
         <% if @displaystudy.present? %>
           <% if (Time.current > Time.parse(@start_timestudy)) && (Time.current < Time.parse(@end_timestudy)) %>
             <div id="eventCurrentdiv">
-              <%= link_to " Drop In Now ", user_viewer_path(@hoststudy.permalink, chatrm: @displaystudy.topic , event: @displaystudy.id), class: "btn btn-primary btn-sm fa fa-video-camera", style: "margin-bottom: 10px; font-size: 30px; border-radius: 5px;" %>
+              <%= link_to " Join a Study Hall Now! ", user_viewer_path(@hoststudy.permalink, chatrm: @displaystudy.topic , event: @displaystudy.id), class: "btn btn-countdown", style: "margin-top: 0px; margin-bottom: 10px; font-size: 30px; border-radius: 5px;" %>
             </div>
           <% end %>
         <% end %>
@@ -14,7 +14,7 @@
             <div class = "col-sm-12" id="eventCurrentdiv">
               <h3>We're working on Group Problem Solving for <%= link_to @nameresearch, event_path(@displayresearch.id), style: "text-shadow: 1px 1px 1px #fff " %></h3>
               <p> right NOW!</p><br>
-              <%= link_to " Join Group Problem Solving NOW ", user_viewer_path(@hostresearch.permalink, chatrm: @displayresearch.topic , event: @displayresearch.id), class: "btn btn-primary btn-sm fa fa-video-camera mt-1", style: "position: relative; font-size: 30px; border-radius: 5px;" %>
+              <%= link_to " Join Group Problem Solving Now! ", user_viewer_path(@hostresearch.permalink, chatrm: @displayresearch.topic , event: @displayresearch.id), class: "btn bbtn-countdown", style: "position: relative; font-size: 30px; border-radius: 5px;" %>
             </div>
           <% end %>
         <% end %>
