--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -83,7 +83,7 @@
             <% end %>
 
             <% if flag %>
-              <%= f.submit "RSVP NOW", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:0px", :id => "RSVPsubmit" %><br>
+              <%= f.submit "RSVP NOW", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:4px; border-style: none", :id => "RSVPsubmit" %><br>
             <% end %>
           <% end %>
 
