--- a/app/views/layouts/_convocalendar.html.erb
+++ b/app/views/layouts/_convocalendar.html.erb
@@ -5,12 +5,36 @@
 <% offset = -1 * Time.now.in_time_zone("Pacific Time (US & Canada)").gmt_offset/3600%>
 <%i = 0%>
 <br>
+<div class="row">
+
+  <div class = "col-3" style="color:#000" >
+    <h2 class="text-center" style="text-align: left !important; padding-left: 32px; font-size:140%; color:#8C1D40">
+      <strong>Title</strong>
+    </h2>
+  </div>
+
+  <div class = "col-3" style="color:#000" >
+    <h2 class="text-center" style="text-align: left !important; padding-left: 105px; font-size:140%; color:#8C1D40">
+      <strong>Time</strong>
+    </h2>
+  </div>
+
+  <div class = "col-xs-3" style="color:#000" >
+    <h2 class="text-center" style="text-align: left !important; padding-left: 420px; font-size:140%; color:#8C1D40">
+      <strong>Share</strong>
+    </h2>
+  </div>
+
+  <div style="width: 94%; margin: auto">
+    <hr>
+  </div>
+</div>
 
 <div class="row">
     <% if @conversations.count != 0 %>
       <% @calendar_events.sort_by{|t| t.start_at}.each do |event| %>
           <% user = User.find(event.user_id) %>
-          <div class = "col-3" style="text-align: left; padding-left: 50px">
+          <div class = "col-3" style="text-align: left; padding-left: 50px; padding-right: 0px">
             <%= link_to event.name, event_path(event.id), class: "h4", style: "font-weight:700; color: #222222;", title: event.desc %><br>
             <%= link_to user.name, user.permalink, style:"color:#6c757d" %>
             <% if user_signed_in? %>
@@ -24,9 +48,11 @@
             <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
             <span><%= image_tag "live2.png" , :class => 'img-live'%></span>
+            <% else %>
+            <div style="padding-left: 100px">&nbsp;</div>
             <%end%>
           </div>
-          <div class = "col-3" style="color:#000" >
+          <div class = "col-3" style="color:#000; text-align: left" >
             <span style="font-size:125%;" id=convocalendar-time-day<%=i%>></span>
             <br>
             <span style="font-size:90%; color: #6c757d;" id=convocalendar-time<%=i%>></span>
@@ -47,7 +73,7 @@
             <% end_time = event.end_at.strftime("%B %d %Y") + ' ' + event.end_at.strftime("%T") %>
 
             <% if ((Time.current - offset.hours) > Time.find_zone("UTC").parse(start_time) ) && ((Time.current - offset.hours) < Time.find_zone("UTC").parse(end_time)) %>
-              <%= link_to " JOIN ", user_viewer_path(user.permalink, chatrm: @displayconvo.topic , event: event.id), class: "btn btn-primary btn-sm" %>
+              <%= link_to " JOIN ", user_viewer_path(user.permalink, chatrm: @displayconvo.topic , event: event.id), class: "btn btn-primary", style:"font-size: 17px; width: 83px; height:28px; line-height:14px; margin-left:1px" %>
               <div id="live<%=i%>"></div>
               <script>
                 function liveCount() {
@@ -89,11 +115,11 @@
                     <% end %>
 
                     <% if flag %>
-                      <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:0px;", :id => "RSVPsubmit" %>
+                      <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:4px; border-style: none", :id => "RSVPsubmit" %>
                     <% end %>
                   <% else %>
                     <%= f.text_field :email, :style => "border: 1px solid grey; border-radius: 0px;", placeholder: "Enter email", :class =>"enter_email" %>
-                    <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:0px;", :id => "RSVPsubmit" %>
+                    <%= f.submit "RSVP", :style => "color: #fff; background-color: #880f42; padding: 2px 20px; font-weight: normal; border-radius:4px; border-style: none", :id => "RSVPsubmit" %>
                   <% end %>
                 <% end %>
             <% end %>
