--- a/app/views/layouts/_countdown_clock.html.erb
+++ b/app/views/layouts/_countdown_clock.html.erb
@@ -2,7 +2,7 @@
   <% if @start_time != nil %>
     <% if (Time.current > Time.find_zone("UTC").parse(@start_time) ) && (Time.current < Time.find_zone("UTC").parse(@start_time) + 1.hour) %>
       <div id="eventCurrentdiv">
-        <%= link_to " Join Conversation Now! ", user_viewer_path(@host.permalink, chatrm: @displayconvo.topic , event: @displayconvo.id), class: "btn btn-countdown", style: "margin-top: 13px; margin-bottom: 10px; border-radius: 5px; font-size: 40px" %>
+        <%= link_to " Join Conversation Now! ", user_viewer_path(@host.permalink, chatrm: @displayconvo.topic , event: @displayconvo.id), class: "btn btn-countdown", style: "margin-top: 13px; margin-bottom: 10px; border-radius: 5px; font-size: 40px; width:60%" %>
       </div>
     <% elsif Time.current < Time.parse(@start_time) %>
       <div id="clockdiv">
