--- a/app/views/static_pages/jointheteam.html.erb
+++ b/app/views/static_pages/jointheteam.html.erb
@@ -1,6 +1,6 @@
 <div class="box" style="background: url( <%= asset_path 'team.jpg' %> ); background-repeat: no-repeat; background-position: center center; background-size: cover; min-height: 450px; max-height: auto; padding-top:320px">
   <!-- team: https://unsplash.com/photos/QckxruozjRg -->
- 
+
   <h1 class="pl-3 pt-5 text-white"><strong>Become a ThinQ.tv Team Member!</strong></h1>
 </div>
 
@@ -16,7 +16,7 @@
          - Go to the <%= link_to 'ThinQ.tv', root_path %> home page to see the schedule and Join a Conversation or <%= link_to "Drop-In", studyhall_path %> session. <br><br>
           - To access a Conversation or Drop-In session by phone, download the JITSI Meet app in advance and join the CONVERSATION or DROPIN chatroom when prompted in the app.<br><br>
           - You may send a resume to info@ThinQ.tv. Preference will be given to those who first attend Conversations or Drop-In sessions.
-        </h4>          
+        </h4>
 
       </div>
       <div class="col-lg-6 col-md-6">
@@ -45,13 +45,13 @@
           </div>
 
             <div class="card-body pr-5 pl-1">
-              <h4><a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
+              <h4><a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne" style="float: center; font-size: 16px">
               LEADERSHIP, OUTREACH, & MARKETING <br></a></h4>
               <div class="collapse" id="collapseOne">
                 <div>
                  This is the most important role at ThinQ.tv. It is your opportunity to be on the ground floor of a movement to create the future of participatory thought-provoking entertainment.<br><br>
 
-      
+
                   Seeking engaging self-starters to host video chat conversations about current events. Successful candidate(s) will gain leadership and community-building skills while moderating exciting live conversations within the context of celebrity news critic shows, such as those hosted by John Oliver, Stephen Colbert, and Hasan Minhaj. It's like going to a cocktail party on Zoom, but you don't have to wait to be invited to discover fascinating conversations with smart people.<br><br>
                   <span><b>Learning Outcomes:</b></span>
                     <br><br>
@@ -84,8 +84,8 @@
           </div>
 
             <div class="card-body pr-5 pl-1">
-                  <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-              RUBY ON RAILS DEVELOPERS <br> 
+                  <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample" style="float: center; font-size: 16px">
+              RUBY ON RAILS DEVELOPERS <br>
               </a></h4>
               <div class="collapse" id="collapseExample">
                 <div>
@@ -105,7 +105,7 @@
                   - Minimum: Demonstrated an ability to accomplish goals through previous academic, volunteer, or work experience. Significant experience in an object-oriented language.<br>
                   - Preferred: Familiarity with Ruby, JavaScript, HTML, CSS, SQL.<br><br>
                 </div>
-              </div> 
+              </div>
             </div>
         </div>
       </div>
@@ -117,8 +117,8 @@
               <!-- uidesign: https://unsplash.com/photos/WYwT7pXuXvo  -->
           </div>
             <div class="card-body pr-5 pl-1">
-                  <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-             UX/UI DESIGNERS <br> 
+                  <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo" style="float: center; font-size: 16px">
+             UX/UI DESIGNERS <br>
               </a></h4>
               <div class="collapse" id="collapseTwo">
                 <div>
@@ -143,4 +143,3 @@
       </div>
     </div>
   </div>
-
