--- a/app/views/static_pages/studyhall.html.erb
+++ b/app/views/static_pages/studyhall.html.erb
@@ -1,11 +1,12 @@
 
 
 <div class="team pt-3 mt-3">
-  <div class="container border shadow">
+  <div class="container" style="border: 1px solid #8C1D40; border-radius: 5px">
     <div class="row" >
 
       <div class="col-lg-7 col-md-12 col-sm-12 col-xs-12 pt-3">
-        <h3 class="text-center text-primary"><b> DROP-IN HOURS: Co-working where we’re socially distanced but not alone</b></h3>
+        <h3 class="text-center text-primary"><b> DROP-IN HOURS </b></h3>
+        <h3 class="text-center text-primary" style="font-size: 20px">Co-working where we’re socially distanced, but not alone</h3>
         <p >
           ThinQ.tv is a <b >Woman-Owned tech startup</b>. Coding While Female is our activism. We support women & minority engineers, designers, & startups in our video chat Drop-In Hours. Drop In & meet us! We'll greet you when you arrive.<br>
           - <b>No agenda:</b> Drop in on your own schedule.<br>
@@ -15,7 +16,7 @@
 
       </div>
 
-      <div class="col-lg-5 col-md-12 col-xs-12 pt-3 pl-4">
+      <div class="col-lg-5 col-md-12 col-xs-12 pt-3 pl-4" style="padding-top: 40px !important">
         <div class="pt-1 text-center" id="countdown_clock">
           <%= render 'layouts/countdown_clockstudy' %>
         </div>
@@ -24,36 +25,32 @@
 
   </div>
 </div>
-<br>
-<br>
 
-<div class="tabContainer">
-  <div class="justify-content-center">
-    <div class="col-sm-12">
-      <h1 class = "text-left text-primary pl-4 ml-1"><b>Drop-In Schedule</b></h1>
-    </div>
+<div>
+  <div class="convo-container text-center" style="background-color: white">
+    <!-- col-lg-3 col-md-6 -->
+    <h1 class = "white"> Drop-In Schedule</h1>
+  </div>
+  <hr class="title-divider" style="width: 25%">
+  </div>
+</div>
 
-    <div class="col-md-8 col-sm-12 text-left pl-2">
-         <% if user_signed_in? %>
-            <br>Don't see your desired hour on the schedule yet? <br>
-
-    </div>
-    <div class="col-md-12 col-sm-12 col-xs-10 pl-0 ml-2 justify-content-center pr-1">
-      <div class="buttonContainer text-center pr-5"><br>
-        <button onclick="showPanel(0,'#2196f3')">Daily View </button>
-        <button onclick="showPanel(1,'#4caf50')">Monthly View </button>
-        <%= link_to 'Post Drop-In Hour', new_event_path, class: "btn btn-warning", title: "Host drop-in sessions or invite people to ask questions about your area of expertise" %>
-      <% end %>
+<div class="tabContainer text-center" style="background-color: #8C1D40; padding-right: 0.2rem; padding-left: 0.2rem; padding-bottom: 0.2rem" >
+      <div class="buttonContainer pr-3">
+        <button onclick="showPanel(0,'#2196f3')" style="position: relative; right: 3.5rem;">Daily View </button>
+        <button onclick="showPanel(1,'#4caf50')" style="position: relative; right: 3.5rem;">Monthly View </button>
+        <% if user_signed_in? %>
+          <%= link_to 'Post Drop-In Hour', new_event_path, class: "btn btn-warning", title: "Host drop-in sessions or invite people to ask questions about your area of expertise", style: "padding-top: 11px" %>
+        <% end %>
       </div>
 
-    </div>
      <div class="tabPanel text-center w-100" >
       <div class="container-fluid " id="calendar">
-        <div class="col-sm-12">
+        <div class="col-sm-12" style="padding-left: 0px !important; padding-right: 0px !important">
         <%= render 'layouts/weeklycalendar',  eventPartial: "layouts/renderday"%>
         </div>
       </div>
-    </div>
+     </div>
 
     <div class="tabPanel" >
       <div class="container-fluid mr-5 pr-5">
@@ -63,7 +60,6 @@
        </div>
      </div>
     </div>
-  </div>
 </div>
 
 <br>
@@ -80,8 +76,8 @@
               <%= image_tag("marketing.jpg" , :style => "height: 280px;  min-width: auto; width:90%;")%>
               <!-- graphic came from https://unsplash.com/photos/wD1LRb9OeEo   -->
           </div>
-            <div class="card-body mr-5 pr-5">
-              <h4> <a class="btn btn-primary btn-lg btn-block text-center" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
+            <div class="card-body mr-5">
+              <h4> <a class="btn btn-primary btn-lg btn-block text-center" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo" style="float: center; font-size: 16px">
             UX Research <br>
               </a></h4>
               <div class="collapse" id="collapseTwo">
@@ -102,8 +98,8 @@
               <%= image_tag("ruby.jpg", :style => "height: 280px;  min-width: auto; width:90%;")%>
               <!-- This image came from https://unsplash.com/photos/yktK2qaiVHI   -->
           </div>
-          <div class="card-body mr-5 pr-5">
-              <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne">
+          <div class="card-body mr-5">
+              <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="false" aria-controls="collapseOne" style="float: center; font-size: 16px">
              RUBY ON RAILS Web Development <br>
               </a>
             </h4>
@@ -126,8 +122,8 @@
               <%= image_tag("Women_Developers_Photo_Edited.jpg", :style => "height: 280px;  min-width: auto; width:90%;")%>
               <!-- uidesign: https://unsplash.com/photos/WYwT7pXuXvo  -->
           </div>
-          <div class="card-body mr-5 pr-5">
-            <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
+          <div class="card-body mr-5">
+            <h4> <a class="btn btn-primary btn-lg btn-block" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree" style="float: center; font-size: 16px">
              WOMAN DEVELOPERS <br>
               </a></h4>
               <div class="collapse" id="collapseThree">
