--- a/app/assets/stylesheets/base/_globals.scss
+++ b/app/assets/stylesheets/base/_globals.scss
@@ -60,6 +60,18 @@ h1.white{
   padding-top: 30px;
 }
 
+h2.white{
+  color: white;
+  text-shadow: 3px 4px black;
+  font-family: Helvetica;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 41px;
+  padding-top: 30px;
+  padding-bottom: 15px;
+}
+
 h1.maroon{
   color: #8C1D40;
   font-family: Helvetica;
