--- a/app/views/static_pages/getinvolved.html.erb
+++ b/app/views/static_pages/getinvolved.html.erb
@@ -22,16 +22,16 @@
 
 <!-- why thinQ.tv section -->
 <div class="row mb-1 pb-1 pl-5 bg-primary">
-  <h1 class="white">
+  <h2 class="white">
     Why ThinQ.tv?
-  </h1>
+  </h2>
   <div class="row align-items-end" >
-    
+
   </div>
   <div class="row mt-0 pt-0 row cols-sm-2" >
     <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
     <div class="row align-self-end pl-3 ml-4">
-        <%= image_tag("activism_icon.png", :style => "height:auto; max-width:46%;")%>
+        <%= image_tag("activism_icon.png", :style => "height:auto; max-width:41%; margin-bottom:20px;")%>
       </div>
       <h3 class="text-warning""><strong>
         Activism</strong>
