--- a/app/views/static_pages/privacy_policy.html
+++ b/app/views/static_pages/privacy_policy.html
@@ -1,6 +1,7 @@
 <div class="row justify-content-center pt-4">
   <div class="col-md-10 col-sm-12 text-left" >
-  <h2 class = "text-center">PRIVACY POLICY</h2>
+    <!--Find where the CSS file is for this or how it is being styled-->
+  <h2 class = "text-center" style="margin-top: 100px; margin-bottom: 50px;">PRIVACY POLICY</h2>
 
   <p>
     This policy provides details on: <br>
