--- a/app/views/static_pages/tos.html.erb
+++ b/app/views/static_pages/tos.html.erb
@@ -1,7 +1,8 @@
 <div class="row justify-content-center pt-4" >
   <div class="col-md-10 col-sm-12 text-left" >
 <center>
-  <h1>ThinQ.tv Terms of Service</h1>
+  <!--Find where the CSS file is for this or how it is being styled-->
+  <h1 style="margin-top: 100px; margin-bottom: 50px;">ThinQ.tv Terms of Service</h1>
 </center>
   <p>
     The following terms shall govern your use of the ThinQ.tv site and interactions with users on it. You agree that use of the website signifies that you have read, understood and agree to be bound by the following terms listed below.  These terms are liable to change at any time. Users will be notified via the updated Terms of Services page on the website. Your continued use of the Websites or services after such changes have been posted means that you agree to the new Terms, even if you have not reviewed the changes. Therefore, you should check the Terms of Service page periodically for updates and changes.
