--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,7 +10,7 @@
     <div  class="container-fluid pl-5 ml-5">
       <div class="row pl-5" id="footer">
         <div class="col-sm-2">
-          <p class="f-header text-left">SITE</p>
+          <p class="f-header text-left"><strong>SITE</strong></p>
           <%= link_to "FAQ", '/faq', :class => "f-link"  %> <br>
           <%= link_to "Invite Us To Speak", "/drschaeferspeaking", :class => "f-link"%> <br>
           <%= link_to "Terms of Service", "/tos", :class => "f-link" %> <br>
@@ -18,14 +18,14 @@
         </div>
         <br class="visible-lg-block">
         <div class="col-sm-2">
-          <p class="f-header text-left">CONTACT</p>
-          <a href="mailto:info@thinq.tv" alt="Email" target="_blank" class="f-link">info@ThinQ.tv</a><br>
+          <p class="f-header text-left"><strong>CONTACT</strong></p>
+          <a href="mailto:info@thinq.tv" alt="Email" target="_blank" class="f-link"><strong>info@ThinQ.tv</strong></a><br>
           <a class="f-link">602-888-3089</a><br>
 
         </div>
         <br class="visible-lg-block">
         <div class="col-sm-2">
-          <p class="f-header text-left">SHARE</p>
+          <p class="f-header text-left"><strong>SHARE</strong></p>
           <% domainurl = "https://thinq.tv" %>
           <% desc = "Participate in thought-provoking conversations!"%>
 
